fix: too large images on small devices #39

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,7 +81,8 @@
   }
 
   .map-marker {
-    border: 4px solid #f6f6f4;
+    border-color: #f6f6f4;
+    border-style: solid;
   }
 
   --mat-toolbar-container-background-color: #ffffff;
@@ -168,10 +169,29 @@
   }
 
   .map-marker {
-    border: 4px solid #343332;
+    border-color: #343332;
+    border-style: solid;
   }
 
   @include mat.all-component-colors(theme-dark.$theme-dark);
+}
+
+@media #{sizes.$breakpoint-small} {
+  .map-marker {
+    border-width: 2px;
+  }
+}
+
+@media #{sizes.$breakpoint-medium} {
+  .map-marker {
+    border-width: 2px;
+  }
+}
+
+@media #{sizes.$breakpoint-large} {
+  .map-marker {
+    border-width: 4px;
+  }
 }
 
 //
@@ -373,8 +393,6 @@ li {
 
 .map-marker {
   display: block;
-  width: 96px;
-  height: 96px;
   border-radius: 50%;
   cursor: pointer;
   padding: 0;
